<resources>
    <string name="app_name">Riansyah FoodApp</string>
    <string name="greating_users">Hii Ryan!</string>
    <string name="detail_greating_add">Mau Makan Apa Hari ini?</string>
    <string name="banner_welcome">Selamat Datang di</string>
    <string name="banner_title"> RATATOUILLE</string>
    <string name="name_list_food">List Menu Makanan</string>
    <string name="namer_catalog">isi text</string>
    <string name="name_product">Nama Jenis Pizza</string>
    <string name="price_info">price list</string>
    <string name="text_kategori">Kategori Makanan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_tagline">Every One Deserve to Eat Well</string>
    <string name="text_header_user">Mau Makan Apa Hari Ini ?</string>
    <string name="form_username_profile">Username</string>
    <string name="tabel_email_profile">Email</string>
    <string name="email_profile_hint">ex: kevin@gmail.com</string>
    <string name="tv_table_nomor_profile">Nomor Hp</string>
    <string name="et_nomor_profile_hint">ex: +62813456782</string>
    <string name="hint_notes">Catatan</string>
    <string name="header_fragment_cart">Cart</string>
    <string name="text_total">TOTAL: </string>
    <string name="text_button_cart_tabel_title">INFORMATION ORDER</string>
    <string name="button_cart_place_order">PLACE ORDER</string>
    <string name="text_delivery_address">Alamat Pengiriman</string>
    <string name="text_hint_address_input">ex: jln in aja dulu sapa tau bisa</string>
    <string name="text_add_to_cart_success" >Berhasil yey</string>
    <string name="add_to_cart_failed">Yah Gagal :)</string>
    <string name="loading">Please Wait</string>
    <string name="text_rp0">Rp0</string>
    <string name="total_quantity">x%s</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="text_title_order_information">Konfirmasi Pesanan</string>
    <string name="text_delivery_method_title">Metode Pengiriman</string>
    <string name="text_take_of">Ambil Sendiri</string>
    <string name="text_delivery">Dikirim ajah</string>
    <string name="text_payment_method">Metode Pembayaran</string>
    <string name="text_cash">Tunai</string>
    <string name="text_e_wallet">Dompet Digital</string>
    <string name="text_title_shopping_sumary">Ringkasan Pembayaran</string>
    <string name="text_checkout_button">Pesan Sekarang</string>
    <string name="tf_name">Pacar Virtual, blm perna ketemu</string>
    <string name="tf_email">MantuIdaman@gmail.com</string>
    <string name="btn_add_to_cart">add to cart</string>
    <string name="text_edit_profile">Edit Profile</string>
    <string name="text_save">SAVE</string>
    <string name="text_dialogg_checkout">Yeyy, jangan lupa di transfer yaa</string>
    <string name="text_go_to_home">Kembali ke Home</string>
    <string name="text_deskripsi_detail_food">Detail Food</string>
    <string name="text_deskripsi_food">isi dari detail food belum di masukkan untuk datanya, Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor justo nec libero ultricies. Nullam euismod, velit ac ultricies consectetur, justo odio tincidunt justo, nec ultricies justo justo nec libero. Sed auctor justo nec libero ultricies. Nullam euismod, velit ac ultricies consectetur, justo odio tincidunt justo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor justo nec libero ultricies. Nullam euismod, velit ac ultricies consectetur, justo odio tincidunt justo, nec ultricies justo justo nec libero. Sed auctor justo nec libero ultricies. Nullam euismod, velit ac ultricies consectetur, justo odio tincidunt justo." />
Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor justo nec libero ultricies. Nullam euismod, velit ac ultricies consectetur, justo odio tincidunt justo, nec ultricies justo justo nec libero. Sed auctor justo nec libero ultricies. Nullam euismod, velit ac ultricies consectetur, justo odio tincidunt justo." />
Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor justo nec libero ultricies. Nullam euismod, velit ac ultricies consectetur, justo odio tincidunt justo, nec ultricies justo justo nec libero. Sed auctor justo nec libero ultricies. Nullam euismod, velit ac ultricies consectetur, justo odio tincidunt justo." />
Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor justo nec libero ultricies. Nullam euismod, velit ac ultricies consectetur, justo odio tincidunt justo, nec ultricies justo justo nec libero. Sed auctor justo nec libero ultricies. Nullam euismod, velit ac ultricies consectetur, justo odio tincidunt justo." />
Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor justo nec libero ultricies. Nullam euismod, velit ac ultricies consectetur, justo odio tincidunt justo, nec ultricies justo justo nec libero. Sed auctor justo nec libero ultricies. Nullam euismod, velit ac ultricies consectetur, justo odio tincidunt justo." />
Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor justo nec libero ultricies. Nullam euismod, velit ac ultricies consectetur, justo odio tincidunt justo, nec ultricies justo justo nec libero. Sed auctor justo nec libero ultricies. Nullam euismod, velit ac ultricies consectetur, justo odio tincidunt justo." />
Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor justo nec libero ultricies. Nullam euismod, velit ac ultricies consectetur, justo odio tincidunt justo, nec ultricies justo justo nec libero. Sed auctor justo nec libero ultricies. Nullam euismod, velit ac ultricies consectetur, justo odio tincidunt justo." />
Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor justo nec libero ultricies. Nullam euismod, velit ac ultricies consectetur, justo odio tincidunt justo, nec ultricies justo justo nec libero. Sed auctor justo nec libero ultricies. Nullam euismod, velit ac ultricies consectetur, justo odio tincidunt justo." />
Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor justo nec libero ultricies. Nullam euismod, velit ac ultricies consectetur, justo odio tincidunt justo, nec ultricies justo justo nec libero. Sed auctor justo nec libero ultricies. Nullam euismod, velit ac ultricies consectetur, justo odio tincidunt justo." />
Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor justo nec libero ultricies. Nullam euismod, velit ac ultricies consectetur, justo odio tincidunt justo, nec ultricies justo justo nec libero. Sed auctor justo nec libero ultricies. Nullam euismod, velit ac ultricies consectetur, justo odio tincidunt justo." />
Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor justo nec libero ultricies. Nullam euismod, velit ac ultricies consectetur, justo odio tincidunt justo, nec ultricies justo justo nec libero. Sed auctor justo nec libero ultricies. Nullam euismod, velit ac ultricies consectetur, justo odio tincidunt justo." />
Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor justo nec libero ultricies. Nullam euismod, velit ac ultricies consectetur, justo odio tincidunt justo, nec ultricies justo justo nec libero. Sed auctor justo nec libero ultricies. Nullam euismod, velit ac ultricies consectetur, justo odio tincidunt justo." />
Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor justo nec libero ultricies. Nullam euismod, velit ac ultricies consectetur, justo odio tincidunt justo, nec ultricies justo justo nec libero. Sed auctor justo nec libero ultricies. Nullam euismod, velit ac ultricies consectetur, justo odio tincidunt justo." />
Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor justo nec libero ultricies. Nullam euismod, velit ac ultricies consectetur, justo odio tincidunt justo, nec ultricies justo justo nec libero. Sed auctor justo nec libero ultricies. Nullam euismod, velit ac ultricies consectetur, justo odio tincidunt justo." />
"/>
</string>
    <string name="teks_loktion_detail">jln semolowari tengah III no 16, Surabaya, Jawa Timur, 60119</string>
    <string name="text_titile_lokasi_detail">Lokasi</string>
</resources>