<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_action_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginHorizontal="20dp"
        android:elevation="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_arrow_left"
            android:padding="8dp"
            android:background="@drawable/bg_oval_white" />
        <TextView
            android:id="@+id/tv_title_toolbar"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="8dp"
            android:text="@string/header_fragment_cart"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:layout_weight="8"
            android:textStyle="bold" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="DONE"
            android:textSize="14sp"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:textColor="@color/base_green" />
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_cart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/cv_section_checkout"
        app:layout_constraintTop_toBottomOf="@+id/ll_action_bar"
        tools:listitem="@layout/item_cart_catalog" />

    <include
        android:id="@+id/layout_state"
        layout="@layout/layout_content_empty_state"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/cv_section_checkout"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_section_checkout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="8dp"
        android:background="@drawable/bg_rectangle_white_16_up"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:paddingVertical="20dp">
            
            <TextView
                android:id="@+id/tv_label_information_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingBottom="16dp"
                android:textColor="@color/text_desk"
                android:text="@string/text_button_cart_tabel_title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />
            
            <TextView
                android:id="@+id/tv_label_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_delivery_address"
                android:paddingBottom="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_label_information_order" />
            
            <EditText
                android:id="@+id/tie_input_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:hint="@string/text_hint_address_input"
                android:textSize="12sp"
                android:background="@drawable/bg_rectangle_white_12"
                android:paddingVertical="6dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_address"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_label_total_price"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:paddingVertical="16dp"
                android:gravity="center"
                android:paddingTop="4dp"
                android:textSize="14sp"
                android:text="@string/text_total"
                android:textColor="@color/text_desk"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tie_input_address" />

            <TextView
                android:id="@+id/tv_total_price"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/text_bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                android:maxLines="1"
                app:layout_constraintStart_toEndOf="@id/tv_label_total_price"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_label_total_price"
                app:layout_constraintBottom_toBottomOf="@+id/tv_label_total_price"
                tools:text="Rp. 300.000" />

            <Button
                android:id="@+id/btn_checkout"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="24dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_rectangle_yellow_16"
                android:textStyle="bold"
                android:textColor="@color/bg_light"
                android:text="@string/button_cart_place_order"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_total_price"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>