<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.profile.ProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/header_profile_fragment"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/button_yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="18dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="9"
                android:gravity="center"
                android:text="Profile"
                android:textColor="@color/base_warm_white"
                android:textSize="18sp"
                android:textStyle="bold" />


            <ImageView
                android:id="@+id/fr_profile"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/bg_oval_white"
                android:padding="10dp"
                android:src="@drawable/ic_edit" />

        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="18dp"
    app:layout_constraintTop_toBottomOf="@+id/header_profile_fragment"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    >

    <FrameLayout
        android:id="@+id/fl_image_profile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/iv_photo_profile"/>
    </FrameLayout>

    <TextView
        android:id="@+id/tv_name_tabel_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/form_username_profile"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/fl_image_profile" />

    <EditText
        android:id="@+id/et_name_text_profile"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="32sp"
        android:background="@drawable/bg_rectangle_white_12"
        android:hint="Nama Lengkap"
        android:paddingHorizontal="14dp"
        android:textColorHint="@color/text_bold"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_tabel_profile" />

    <TextView
        android:id="@+id/tv_email_tabel_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/tabel_email_profile"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/et_name_text_profile" />

    <EditText
        android:id="@+id/et_email_text_profile"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/bg_rectangle_white_12"
        android:hint="@string/email_profile_hint"
        android:paddingHorizontal="14dp"
        android:layout_marginHorizontal="8dp"
        android:textColorHint="@color/text_semibold"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_email_tabel_profile" />

    <TextView
        android:id="@+id/tv_nomor_tabel_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="@string/tv_table_nomor_profile"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/et_email_text_profile" />

    <EditText
        android:id="@+id/et_nomor_text_profile"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/bg_rectangle_white_12"
        android:hint="@string/et_nomor_profile_hint"
        android:paddingHorizontal="14dp"
        android:layout_marginHorizontal="8dp"
        android:textColorHint="@color/text_semibold"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_nomor_tabel_profile" />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>